Ndl: fixed overlapping text in the citation table on the Record page (ALLI 1417).

--- a/web/interface/themes/ndl/css/default.css
+++ b/web/interface/themes/ndl/css/default.css
@@ -2985,7 +2985,11 @@ div.recordsubcontent .call-slip-form form > p  {
     color:#666;
     padding: 0.5em 15px 0 0;
     vertical-align: top;
-    width:100px;
+    width:140px;
+    -moz-hyphens:auto;
+    -webkit-hyphens:auto;
+    hyphens:auto;
+    word-wrap:break-word;
 }
 .citation tr {
     border-collapse: collapse;
